fix images overflow in project section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,6 +4,11 @@ html {
 
 body {
   font-family: 'Open Sans', sans-serif;
+  line-height: 1.4;
+}
+
+img {
+  width: 100%;
 }
 
 /* header and navigation section */
@@ -84,20 +89,17 @@ body {
 
 /* Featured Section */
 .image-container {
-  opacity: 0.7;
-  transition: all, 0.5s;
-  overflow: hidden;
-}
-
-.image-container:hover {
-  transform: scale(1.3);
-  opacity: 1;
   overflow: hidden;
 }
 
 .image-container img {
-  width: 100%;
-  height: auto;
+  opacity: 0.7;
+  transition: all, 0.5s;
+}
+
+.image-container img:hover {
+  transform: scale(1.3);
+  opacity: 1;
 }
 
 h2 {
